# rlc-estimates

./: .gitignore  CMakeLists.txt  Makefile  README  RLC Estimates.sln  RLC Estimates.vcxproj  RLC Estimates.vcxproj.filters  data.h  estimate.py  estimation.cpp  estimation.h  fft.cpp  fft.h  file.cpp  file.h  git.sh~  rlc-estimate  rlc-estimate.cpp  simulation.cpp  simulation.h  spectral.cpp  spectral.h  sxy.daty
cpp/: CMakeLists.txt  args.txt  data.h  estimation.cpp  fft.cpp  fft.h  file.cpp  plot.gnuplot  pressure.day  rlc-estimate.cpp  spectral.cpp
octave/: freq.csv  octave-workspace  simulate.m  time.csv
python/: dat.csv  estimate.py  freq.csv  freq.txt.csv  out.csv  results.csv  rlc.csv  rlc.py  simulate.py  subject_0_freq.csv  subject_0_time.csv  subject_1_freq.csv  subject_1_time.csv  subject_2_freq.csv  subject_2_time.csv  test.csv  thing.csv  time.csv  time.txt.csv
